--- a/bot-battir/src/App.css
+++ b/bot-battir/src/App.css
@@ -2,37 +2,36 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.card {
+  width: 20%;;
+  margin: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  word-wrap: break-word;
+}
+
+.card:hover {
+  box-shadow: 0 30px 30px 0 rgba(0, 0, 0, 0.2);
+  color: grey;
+}
+
+.delete-button {
+  background-color: #fafafa; 
+  border: 2px solid red;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  font-size: 20px;
+  transition-duration: 1s;
+}
+
+.delete-button:hover {
+  background-color: red;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
